--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxtjs/style-resources": "^1.2.1",
-    "nuxt": "3.0.0-rc.11",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.0.2"
-  }
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare"
+	},
+	"devDependencies": {
+		"@nuxtjs/style-resources": "^1.2.1",
+		"@pinia/nuxt": "^0.4.2",
+		"nuxt": "3.0.0-rc.11",
+		"sass": "^1.55.0",
+		"sass-loader": "^13.0.2"
+	},
+	"dependencies": {
+		"pinia": "^2.0.22"
+	}
 }
